<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>


    <string name="login_ek1_string">Login</string>
    <string name="login_ek2_string">Login</string>
    <string name="new_here__register_string">New Here? Register</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="login_ek3_string">Login</string>

    <string name="send_your_report_string">Send your report</string>
    <string name="upload_image_string">Upload image</string>
    <string name="type_of_hazard__string">Type of hazard:</string>
    <string name="description__string">Description:</string>
    <string name="severity_level__string">Severity Level:</string>
    <string name="low_string">Low</string>
    <string name="moderate_string">Moderate</string>
    <string name="high_string">High</string>
    <string name="login_string">Submit</string>

    <string name="risk_assessment_string">Risk Assessment</string>
    <string name="report_1_string">Report 1</string>
    <string name="report_2_string">Report 2</string>


    <string name="mark_as_complete_string">Mark as complete</string>
    <string name="edit_string">Edit</string>


    <string name="send_report_string">Send report</string>
    <string name="manage_risk_string">Manage Risk</string>
    <string name="home_string">Home</string>
    <string name="app_label">Construction Risk Assessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="answer_1">Low Severity: Minimal impact, easily resolved without significant consequences. Medium Severity: Noticeable disruptions, require additional effort, time, or resources to address. High Severity: Major disruptions, substantial damage, or severe consequences, demanding immediate attention and substantial resources.</string>
    <string name="question_2">What kind of information can I get from a construction risk assessment app?</string>
    <string name="question_1">How are severity levels determined in construction risk assessment?</string>
    <string name="answer_2">The construction risk assessment app presents images and brief descriptions of hazards, including falls, electrical hazards, equipment failure, structural instability, and hazardous materials. Each hazard is assigned a severity level, indicating the level of risk associated with it</string>
</resources>