<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FAQFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/faqbg"
        >

        <TextView
            android:id="@+id/faq_title"
            android:text="@string/faq"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/question_1"
            android:text="@string/question_1"
            android:textSize="20sp"
            android:textStyle="bold"

            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faq_title"
            />

        <TextView
            android:id="@+id/answer_1"
            android:text="@string/answer_1"
            android:textSize="19sp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/question_1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/question_2"
            android:text="@string/question_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/answer_1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/answer_2"
            android:text="@string/answer_2"
            android:textSize="19sp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/question_2"
            app:layout_constraintStart_toStartOf="parent"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>